--- a/custom_addons/om_hospital/views/menu.xml
+++ b/custom_addons/om_hospital/views/menu.xml
@@ -9,4 +9,9 @@
               name="Patient Details"
               parent="menu_hospital_root"
               sequence="0"/>
+
+    <menuitem id="menu_appointment_master"
+              name="Appointment Details"
+              parent="menu_hospital_root"
+              sequence="1"/>
 </odoo>
