--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -28,9 +28,14 @@
                 <filter name="filter_female" string="Female" domain="[('gender', '=', 'female')]"/>
                 <separator/>
                 <filter name="filter_kid" string="Kid" domain="[('age', '&lt;=', 13)]"/>
+                <separator/>
+                <filter name="filter_archive" string="Archived" domain="[('active', '=', False)]"/>
                 <group expand="0" string="Group By">
                     <filter string="Gender" name="group_by_gender" context="{'group_by':'gender'}"/>
                 </group>
+                <searchpanel>
+                    <field name="gender" icon="fa-users" enable_counters="1"/>
+                </searchpanel>
             </search>
         </field>
     </record>
@@ -49,9 +54,15 @@
                         <group>
                             <field name="gender"/>
                             <field name="ref"/>
+                            <field name="active" invisible="1"/>
                         </group>
                     </group>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" group="base.group_user"/>
+                    <field name="activity_ids"/>
+                    <field name="message_ids"/>
+                </div>
             </form>
         </field>
     </record>
@@ -61,7 +72,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">hospital.patient</field>
         <field name="view_mode">tree,form</field>
-        <field name="context">{}</field>
+        <field name="context">{'search_default_group_by_gender':1, 'search_default_filter_male':1}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Create your 1st patient !
