--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -31,12 +31,25 @@
                     <group>
                         <group>
                             <field name="patient_id"/>
-                        </group>
-                        <group>
-                            <field name="appointment_time"/>
+                            <field name="gender"/>
                             <field name="booking_date"/>
                         </group>
+                        <group>
+                            <field name="ref"/>
+                            <field name="appointment_time"/>
+                        </group>
                     </group>
+
+                    <notebook>
+                        <page string="Prescription" name="perscription">
+                            <field name="prescription" placeholder="Enter your prescription"/>
+                        </page>
+                        <page string="Pharmacy" name="pharmacy">
+                            <group>
+                            </group>
+                        </page>
+                    </notebook>
+
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids" group="base.group_user"/>
