--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -26,8 +26,8 @@
                 <field name="gender"/>
                 <filter name="filter_male" string="Male" domain="[('gender', '=', 'male')]"/>
                 <filter name="filter_female" string="Female" domain="[('gender', '=', 'female')]"/>
-                <separator/>
-                <filter name="filter_kid" string="Kid" domain="[('age', '&lt;=', 13)]"/>
+<!--                <separator/>-->
+<!--                <filter name="filter_kid" string="Kid" domain="[('age', '&lt;=', 13)]"/>-->
                 <separator/>
                 <filter name="filter_archive" string="Archived" domain="[('active', '=', False)]"/>
                 <group expand="0" string="Group By">
@@ -49,11 +49,13 @@
                     <group>
                         <group>
                             <field name="name"/>
+                            <field name="dobirth"/>
                             <field name="age"/>
                         </group>
                         <group>
                             <field name="gender"/>
                             <field name="ref"/>
+                            <field name="appointment_id"/>
                             <field name="active" invisible="1"/>
                         </group>
                     </group>
