--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -5,10 +5,20 @@
         <field name="name">hospital.appointment.tree</field>
         <field name="model">hospital.appointment</field>
         <field name="arch" type="xml">
-            <tree>
+            <tree create="0" delete="0"
+                  decoration-success="state == 'done'"
+                  decoration-danger="state == 'cancel'"
+                  decoration-warning="state == 'in_cosultation'">
                 <field name="patient_id"/>
                 <field name="appointment_time"/>
                 <field name="booking_date"/>
+                <field name="priority" widget="priority"/>
+                <field name="state"
+                       decoration-success="state == 'done'"
+                       decoration-info="state == 'draft'"
+                       decoration-danger="state == 'cancel'"
+                       decoration-warning="state == 'in_cosultation'"
+                       widget="badge"/>
             </tree>
         </field>
     </record>
@@ -19,6 +29,10 @@
         <field name="arch" type="xml">
             <search>
             </search>
+            <searchpanel>
+                <field name="priority" enable_counters="1"/>
+                <field name="state" icon="fa-users" enable_counters="1"/>
+            </searchpanel>
         </field>
     </record>
 
@@ -26,17 +40,34 @@
         <field name="name">hospital.appointment.form</field>
         <field name="model">hospital.appointment</field>
         <field name="arch" type="xml">
-            <form>
+            <form create="0" delete="0" edit="0">
+                <header>
+                    <field name="state" widget="statusbar" nolable="1" options="{'clickable': '1'}"
+                           statusbar_visible="draft,in_cosultation,done"/>
+                </header>
                 <sheet>
+                    <div class="oe_title">
+                        <h1>
+                            <field name="priority" widget="priority" class="mr-3"/>
+                        </h1>
+                    </div>
                     <group>
                         <group>
                             <field name="patient_id"/>
                             <field name="gender"/>
-                            <field name="booking_date"/>
+                            <field name="booking_date" help="Date of Entering The Booking"/>
                         </group>
                         <group>
                             <field name="ref"/>
                             <field name="appointment_time"/>
+                            <button name="action_test" string="Object Button"
+                                    help="On Clicking this, Msg will be printed in log"
+                                    confirm="Are you sure to execute Python Code?"
+                                    type="object" class="oe_highlight"/>
+                            <button name="%(om_hospital.action_hospital_patient)d" string="Test Action Btn"
+                                    help="On Clicking this, you will be redirected to Patient Record List"
+                                    confirm="Are you sure to open the patient action?"
+                                    type="action" class="oe_highlight"/>
                         </group>
                     </group>
 
