Done One2many/Hide Column in one2many/base.group_no_one/add Image/oe_avatar class/Boolean Toggle/color_picker,color widget

--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -26,8 +26,8 @@
                 <field name="gender"/>
                 <filter name="filter_male" string="Male" domain="[('gender', '=', 'male')]"/>
                 <filter name="filter_female" string="Female" domain="[('gender', '=', 'female')]"/>
-<!--                <separator/>-->
-<!--                <filter name="filter_kid" string="Kid" domain="[('age', '&lt;=', 13)]"/>-->
+                <!--                <separator/>-->
+                <!--                <filter name="filter_kid" string="Kid" domain="[('age', '&lt;=', 13)]"/>-->
                 <separator/>
                 <filter name="filter_archive" string="Archived" domain="[('active', '=', False)]"/>
                 <group expand="0" string="Group By">
@@ -46,6 +46,7 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <field name="image" widget="image" class="oe_avatar"/>
                     <group>
                         <group>
                             <field name="name"/>
