--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -77,13 +77,15 @@
                             <field name="booking_date" help="Date of Entering The Booking" default_focus="1"/>
                         </group>
                         <group>
+                            <field name="hide_sales_price"/>
                             <field name="ref"/>
                             <field name="appointment_time"/>
-                            <button name="action_test" string="Object Button"
+                            <button name="action_test" string="Object Button" groups="base.group_no_one"
                                     help="On Clicking this, Msg will be printed in log"
                                     confirm="Are you sure to execute Python Code?"
                                     type="object" class="oe_highlight"/>
                             <button name="%(om_hospital.action_hospital_patient)d" string="Test Action Btn"
+                                    groups="base.group_no_one"
                                     help="On Clicking this, you will be redirected to Patient Record List"
                                     confirm="Are you sure to open the patient action?"
                                     type="action" class="oe_highlight"/>
@@ -97,8 +99,22 @@
                                    options="{'collaborative': true, 'resizable': true}"/>
                         </page>
                         <page string="Pharmacy" name="pharmacy">
-                            <group>
-                            </group>
+                            <field name="pharmacy_line_ids">
+                                <tree editable="bottom">
+                                    <field name="product_id"/>
+                                    <field name="price_unit" attrs="{'column_invisible': [('parent.hide_sales_price', '=', True)]}"/>
+                                    <field name="qty"/>
+                                    <field name="price" attrs="{'column_invisible': [('parent.hide_sales_price', '=', True)]}"/>
+                                </tree>
+                                <form>
+                                    <group>
+                                        <field name="product_id"/>
+                                        <field name="price_unit" attrs="{'column_invisible': [('parent.hide_sales_price', '=', True)]}"/>
+                                        <field name="qty"/>
+                                        <field name="price" attrs="{'column_invisible': [('parent.hide_sales_price', '=', True)]}"/>
+                                    </group>
+                                </form>
+                            </field>
                         </page>
                     </notebook>
 
