--- a/custom_addons/om_hospital/views/menu.xml
+++ b/custom_addons/om_hospital/views/menu.xml
@@ -13,5 +13,10 @@
     <menuitem id="menu_appointment_master"
               name="Appointment Details"
               parent="menu_hospital_root"
-              sequence="1"/>
+              sequence="20"/>
+
+    <menuitem id="menu_configuration"
+              name="Configuration"
+              parent="menu_hospital_root"
+              sequence="30"/>
 </odoo>
